--- a/codex/config.toml
+++ b/codex/config.toml
@@ -1,5 +1,6 @@
-model = "gpt-5.2-codex"
+model = "gpt-5.3-codex"
 model_reasoning_effort = "medium"
+personality = "pragmatic"
 
 [projects."/Users/tim/dev/dotfiles"]
 trust_level = "trusted"
