chore(tmux): update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -249,6 +249,9 @@ bind-key -T copy-mode-vi C-v send-keys -X cancel \; paste-buffer
 # Selection highlighting color (Nord theme)
 set -g mode-style "fg=#2E3440,bg=#a3be8c"
 
+# Leader + V for copy-mode (same as [)
+bind-key -T prefix V copy-mode
+
 # sesh
 unbind-key s
 bind-key "s" run-shell "tmux run-shell \"sesh connect \\\"$(
