--- a/opencode/oh-my-opencode_openai_and_antigravity.jsonc
+++ b/opencode/oh-my-opencode_openai_and_antigravity.jsonc
@@ -84,6 +84,10 @@
       "temperature": 0.1,
       "prompt_append": "Focus on robustness, error handling, and type safety.",
     },
+    "quick": {
+      "model": "google/gemini-3-flash",
+      "temperature": 0.3,
+    },
   },
   "claude_code": {
     "mcp": true,
