--- a/opencode/oh-my-opencode_openai_glm.jsonc
+++ b/opencode/oh-my-opencode_openai_glm.jsonc
@@ -15,11 +15,11 @@
       "temperature": 0.1,
     },
     "librarian": {
-      "model": "openai/gpt-5.1-codex-mini",
+      "model": "zai-coding-plan/glm-4.7-flash",
       "temperature": 0.2,
     },
     "explore": {
-      "model": "openai/gpt-5.1-codex-mini",
+      "model": "zai-coding-plan/glm-4.7-flash",
       "temperature": 0.1,
     },
     "frontend-ui-ux-engineer": {
@@ -27,11 +27,11 @@
       "temperature": 0.4,
     },
     "document-writer": {
-      "model": "openai/gpt-5.1-codex-mini",
+      "model": "zai-coding-plan/glm-4.7-flash",
       "temperature": 0.3,
     },
     "multimodal-looker": {
-      "model": "openai/gpt-5.2",
+      "model": "zai-coding-plan/glm-4.6v",
       "temperature": 0.1,
     },
     "build": {
@@ -72,13 +72,15 @@
   "background_task": {
     "defaultConcurrency": 5,
     "providerConcurrency": {
-      "openai": 5,
+      "openai": 4,
+      "zai-coding-plan": 4,
     },
     "modelConcurrency": {
-      "openai/gpt-5.2": 3,
+      "zai-coding-plan/glm-4.7-flash": 8,
+      "zai-coding-plan/glm-4.6v": 3,
+      "openai/gpt-5.2": 2,
       "openai/gpt-5.2-codex": 1,
-      "openai/gpt-5.1-codex-max": 3,
-      "openai/gpt-5.1-codex-mini": 8,
+      "openai/gpt-5.1-codex-max": 2,
     },
   },
   "categories": {
@@ -93,7 +95,7 @@
       "prompt_append": "Focus on robustness, error handling, and type safety.",
     },
     "quick": {
-      "model": "openai/gpt-5.1-codex-mini",
+      "model": "zai-coding-plan/glm-4.7-flash",
       "temperature": 0.3,
     },
   },
