--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -195,6 +195,7 @@ prepend_keymap = [
   { on = [ "g", "r", ], run = 'shell -- ya emit cd "$(git rev-parse --show-toplevel)"', desc = "Go root of the current Git repository" },
   { on = [ "c", "a", ], run = "plugin ouch", desc = "Archive selected files" },
   { on = "f", run = "plugin searchjump -- autocd", desc = "searchjump mode" }, # "plugin searchjump -- autocd"
+  { on = "<C-p>", run = "plugin mux next", desc = "Next SQLite preview" },
 
 ]
 
