docs: Add usage notes to Raycast Alacritty script
- Clarify Window Management extension dependency
- Document script behavior: open + bottom-half snap via deep link
- No functional changes, just documentation improvements

--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -38,7 +38,7 @@
     "vercel": {
       "type": "remote",
       "url": "https://mcp.vercel.com",
-      "enabled": true,
+      "enabled": false,
     },
     "playwriter": {
       "type": "local",
