Add simple Alacritty launcher for Raycast testing

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ codex/vendor_imports/
 yazi/plugins/duckdb.yazi/
 yazi/plugins/yazi-plugins/
 yazi/plugins/preview-sqlite.yazi
+sourcegit/preference.json
