tmux: copy selection with й in copy-mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -229,7 +229,8 @@ bind-key -n MouseUp2Status kill-window -t=
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi Enter send-keys -X copy-selection
 
-bind-key -T copy-mode-vi й send-keys -X cancel
+bind-key -T copy-mode-vi q if-shell -F "#{selection_active}" 'send-keys -X copy-pipe-and-cancel "pbcopy"' 'send-keys -X cancel'
+bind-key -T copy-mode-vi й if-shell -F "#{selection_active}" 'send-keys -X copy-pipe-and-cancel "pbcopy"' 'send-keys -X cancel'
 bind-key -T copy-mode-vi i send-keys -X cancel
 bind-key -T copy-mode-vi a send-keys -X cancel
 bind-key -T copy-mode-vi ш send-keys -X cancel
