chore(git): ignore sourcegit avatars

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ yazi/plugins/duckdb.yazi/
 yazi/plugins/yazi-plugins/
 yazi/plugins/preview-sqlite.yazi
 sourcegit/preference.json
+sourcegit/avatars/
