--- a/opencode/oh-my-opencode_antigravity_gemini_3.jsonc
+++ b/opencode/oh-my-opencode_antigravity_gemini_3.jsonc
@@ -95,6 +95,11 @@
       "temperature": 0.1,
       "prompt_append": "Focus on robustness, error handling, and type safety.",
     },
+    "architecture": {
+      "model": "google/antigravity-claude-opus-4-5-thinking-high",
+      "temperature": 0.15,
+      "prompt_append": "For architecture tasks, follow /Users/tim/dev/dotfiles/opencode/LIKEC4_AGENT_PLAYBOOK.md. Prefer LikeC4 DSL changes, then validate with `npx likec4 validate`, and return preview/build commands.",
+    },
     "quick": {
       "model": "google/antigravity-gemini-3-flash",
       "temperature": 0.3,
