--- a/opencode/oh-my-opencode_antigravity_gemini_3.jsonc
+++ b/opencode/oh-my-opencode_antigravity_gemini_3.jsonc
@@ -98,7 +98,7 @@
     "architecture": {
       "model": "google/antigravity-claude-opus-4-5-thinking-high",
       "temperature": 0.15,
-      "prompt_append": "For architecture tasks, follow /Users/tim/dev/dotfiles/opencode/LIKEC4_AGENT_PLAYBOOK.md. Prefer LikeC4 DSL changes, then validate with `npx likec4 validate`, and return preview/build commands.",
+      "prompt_append": "For architecture tasks, use $likec4-architecture and follow /Users/tim/dev/dotfiles/codex/skills/likec4-architecture/SKILL.md. Prefer LikeC4 DSL changes, validate with `npx likec4 validate`, and return preview/build/export commands.",
     },
     "quick": {
       "model": "google/antigravity-gemini-3-flash",
