Waiting for pre-file analyzing to completed...
- Switch model references from google/antigravity-claude-*-4-5-*-thinking-* to google/antigravity-claude-*-4-6-*-thinking-* across roles and categories, align modelConcurrency keys to the 4-6 names, simplify the architecture prompt by removing the local path and retaining $likec4-architecture with npx likec4 validate and preview/build/export guidance, and enable skills, agents, and plugins in claude_code.
- Remove custom OpenCode configuration that defines agent models and temperatures, Sisyphus orchestration and Ralph loop settings, background task and model concurrency limits, task categories, Claude Code compatibility flags, git master options, experimental features, and disabled features.
- Add configuration defining multiple AI agents with models and temperatures, background task and model concurrency limits, planner and loop options, category-specific model presets and prompts, experimental context-pruning flags, and toggles for skills, plugins, and git commit behavior.
- Recommend claude-opus-4-6 for Sisyphus and enable skills, agents, and plugins in claude_code.
- Enable skills in claude_code configuration
- Switch recommended orchestration model to claude-opus-4-6, simplify the architecture prompt to reference $likec4-architecture instead of an explicit SKILL file, and enable skills, agents, and plugins in the claude_code configuration.
- Replace Anthropic Claude model claude-opus-4-5 with claude-opus-4-6 in the model concurrency configuration

--- a/opencode/oh-my-opencode.jsonc
+++ b/opencode/oh-my-opencode.jsonc
@@ -1,1 +1,1 @@
-/Users/tim/.config/opencode/oh-my-opencode_openai_glm.jsonc
+/Users/tim/dev/dotfiles/opencode/oh-my-opencode_antigravity_opus_4_6.jsonc
