--- a/opencode/oh-my-opencode_openai.jsonc
+++ b/opencode/oh-my-opencode_openai.jsonc
@@ -95,7 +95,7 @@
     "architecture": {
       "model": "openai/gpt-5.2",
       "temperature": 0.15,
-      "prompt_append": "For architecture tasks, use $likec4-architecture and follow /Users/tim/dev/dotfiles/.agents/skills/likec4-architecture/SKILL.md. Prefer LikeC4 DSL changes, validate with `npx likec4 validate`, and return preview/build/export commands.",
+      "prompt_append": "For architecture tasks, use $likec4-architecture. Prefer LikeC4 DSL changes, validate with `npx likec4 validate`, and return preview/build/export commands.",
     },
     "quick": {
       "model": "openai/gpt-5.1-codex-mini",
@@ -105,10 +105,10 @@
   "claude_code": {
     "mcp": false,
     "commands": false,
-    "skills": false,
-    "agents": false,
+    "skills": true,
+    "agents": true,
     "hooks": false,
-    "plugins": false,
+    "plugins": true,
     "plugins_override": {},
   },
   "git_master": {
