config(opencode): enable hooks in profiles
Entire-Checkpoint: ae349e92d1a6

--- a/opencode/oh-my-opencode_antigravity_gemini_3.jsonc
+++ b/opencode/oh-my-opencode_antigravity_gemini_3.jsonc
@@ -110,7 +110,7 @@
     "commands": false,
     "skills": true,
     "agents": true,
-    "hooks": false,
+    "hooks": true,
     "plugins": true,
     "plugins_override": {},
   },
