--- a/opencode/oh-my-opencode_antigravity_opus_4_6.jsonc
+++ b/opencode/oh-my-opencode_antigravity_opus_4_6.jsonc
@@ -105,7 +105,7 @@
     "commands": false,
     "skills": true,
     "agents": true,
-    "hooks": false,
+    "hooks": true,
     "plugins": true,
     "plugins_override": {}
   },
