--- a/opencode/oh-my-opencode_glm.jsonc
+++ b/opencode/oh-my-opencode_glm.jsonc
@@ -196,7 +196,7 @@
     "commands": false,
     "skills": true,
     "agents": true,
-    "hooks": false,
+    "hooks": true,
     "plugins": true,
     "plugins_override": {},
   },
