--- a/opencode/oh-my-opencode_glm_free.jsonc
+++ b/opencode/oh-my-opencode_glm_free.jsonc
@@ -189,7 +189,7 @@
     "commands": false,
     "skills": true,
     "agents": true,
-    "hooks": false,
+    "hooks": true,
     "plugins": true,
     "plugins_override": {},
   },
