--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -6,10 +6,10 @@
 
     // Auth
     "opencode-openai-codex-auth@4.4.0",
-    "opencode-antigravity-auth@1.5.1",
+    "opencode-antigravity-auth@1.6.0",
 
     // Misc
-    "@plannotator/opencode@0.8.0",
+    "@plannotator/opencode@0.8.5",
     "@franlol/opencode-md-table-formatter@0.0.3",
     "@nick-vi/opencode-type-inject@1.3.1",
     "@bastiangx/opencode-unmoji@0.3.11",
@@ -45,6 +45,11 @@
       "command": ["npx", "-y", "playwriter@latest"],
       "enabled": true,
     },
+    "engram": {
+      "command": [ "engram", "mcp" ],
+      "enabled": true,
+      "type": "local"
+    }
   },
   "tui": {
     "scroll_speed": 2,
